# QuasiAffineTransform

./: AUTHORS  CMakeLists.txt  ChangeLog  FindLongvol.cmake  FindVol.cmake  README.md  doxy.config.in
entrees/: 1_Contractante_bis  2_Dilatante_bis
entrees/2D/: 5_Equivolume_rotation_53,1  6_Bug_points_noirs
entrees/3D/: 3_dilatante
input/: 3_Inversible_bis  4_Rotation_pythagoricienne_2pisur33_bis  Rotation_50.txt
input/2D/: 1_Contractante  2_Dilatante  3_Inversible  4_Rotation_pythagoricienne_2pisur33
input/3D/: 1_contractante  2_isom  32dodge.vol  3_dilatantebis
output/: cube.vol  cube_1_b.vol  cube_1_p.vol  cube_2_p.vol
sorties/: cube_2_b.vol
src/: CMakeLists.txt
src/2D/: CMakeLists.txt  image.cpp  image.hpp  matrix2x2.cpp  matrix2x2.hpp  paving.cpp  paving.hpp  qat-2D.cpp  qat.cpp  qat.hpp  vector2d.cpp  vector2d.hpp
src/3D/: CMakeLists.txt  image3d.cpp  image3d.hpp  matrix3x3.hpp  paving3d.cpp  paving3d.hpp  qat-3D.cpp  qat3d.cpp  qat3d.hpp  vector3d.cpp  vector3d.hpp
src/common/: color.hpp  mathematic.cpp  mathematic.hpp
src/tclap/: DocBookOutput.h
src/tools/: CMakeLists.txt  QATPhantom2D.cpp
